# axum_rest_api

./: Cargo.toml
src/: error.rs  log.rs  main.rs  model.rs
src/util/: mod.rs
src/web/: middleware_auth.rs  mod.rs  routes_login.rs  routes_tickets.rs
