[package]
name = "rust_project_01"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "main"
path = ""

[dependencies]
axum = { version = "0.7.1", features = ["macros"] }
lazy-regex = "3.1.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
strum_macros = "0.25.3"
tokio = { version = "1.34.0", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.0", features = ["fs"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
